# LGFX

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  premake5.lua
Astral.Canvas/: Application.cpp  CMakeLists.txt  InputState.cpp  Shader.cpp  ShaderState.cpp  Window.cpp  premake5.lua
AstralCanvasC/: Application.c  Application_c.h  Input.c  InputState.c  ShaderFunction.c  ShaderPipeline.c  Window_c.h  premake5.lua
AstralCanvasC/glfw/: ApplicationGlfw.c  InputStateGlfw.c  WindowGlfw.c
AstralCanvasCPP/: Application.cpp  BatchTemplateStore.cpp  InputState.cpp  Shader.cpp  ShaderFunction.cpp  ShaderPipeline.cpp  ShaderState.cpp  Window.cpp  premake5.lua
ShaderCompiler/: HeaderImpls.cpp  ShaderCompiler.cpp  ShaderCompiler.hpp  main.cpp  premake5.lua
dependencies/: GLFW.lua
examples/AstralCanvas/compute/: Program.c  premake5.lua
examples/AstralCanvas/triangle/: Program.c  premake5.lua
examples/AstralCanvasCPP/compute/: Program.cpp  premake5.lua
examples/AstralCanvasCPP/triangle/: Program.cpp  premake5.lua
examples/Shaders/: DrawParticles.sfn  DrawParticles.slang  Triangle.slang  UpdateParticles.sfn
examples/high-level-api/SDFs/: CMakeLists.txt  CreateMeshSDF.shader  DrawSDFs.shader  ModelLoader.cpp  ModelLoader.hpp  Program.cpp  RayTrace.hpp  RenderMesh.shader  premake5.lua
examples/high-level-api/compute/: CMakeLists.txt  DrawParticles.func  DrawParticles.sfn  DrawParticles.shader  DrawParticles.shaderobj  Program.cpp  UpdateParticles.func  UpdateParticles.slang  premake5.lua
examples/high-level-api/triangle/: CMakeLists.txt  Program.cpp  Triangle.func  Triangle.sfn  Triangle.shaderobj  Triangle.slang  premake5.lua
examples/low-level-api/triangle/: Program.cpp  premake5.lua
include/AstralCanvas/: Application.h  Input.h  InputState.h  ShaderFunction.h  ShaderPipeline.h  Window.h
include/AstralCanvasHPP/: Application.hpp  BatchTemplateStore.hpp  Input.hpp  InputState.hpp  Shader.hpp  ShaderFunction.hpp  ShaderPipeline.hpp  ShaderState.hpp  Window.hpp
include/lgfx/: Linxc.h  lgfx-glfw.h  lgfx.h  sync.h
include/lgfx-astral/: Application.hpp  Input.hpp  InputState.hpp  Shader.hpp  ShaderState.hpp  Window.hpp  lgfx-astral-types.hpp
src/: CMakeLists.txt  LGFXImpl.c  LGFXImpl.h  Logging.h  memory.h  premake5.lua  sync.h
src/vulkan/: LGFXVulkan.c  LGFXVulkan.h  vk_mem_alloc.cpp
